updated some small details, such as only differ between min and max length and translating labels to english

--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>XSD Visualizer – Werte-Restriktionen sichtbar</title>
+    <title>XSD Visualizer</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>XSD Visualizer – Attribute sichtbar, breite Ansicht</h1>
-    <p>
-      <span class="element-badge">Element</span> <b>Elemente</b>: große
-      Karten.<br />
-      <span class="attr-badge">Attribut</span> <b>Attribute</b>: kompakte gelbe
-      Kärtchen, <b>immer direkt unter dem Element</b> sichtbar!<br />
-      Ansicht bis 1700px breit, alles ein-/ausklappbar.
-    </p>
+    <h1>XSD Visualizer</h1>
+    <p></p>
     <input type="file" id="fileInput" accept=".xsd,.xml" />
     <div id="tree"></div>
     <script src="main.js"></script>
