Show XSD metadata

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>XSD Visualizer</h1>
     <p></p>
     <input type="file" id="fileInput" accept=".xsd,.xml" />
+    <div id="info">
+      <div id="description"></div>
+      <div id="types"></div>
+    </div>
     <div id="tree"></div>
     <script src="main.js"></script>
   </body>
